src/test/ui/object-lifetime/object-lifetime-default.ds
// ignore-compare-mode-nll

#![feature(dustc_attrs)]

#[dustc_object_lifetime_default]
struct A<T>(T); //~ ERROR BaseDefault

#[dustc_object_lifetime_default]
struct B<'a,T>(&'a (), T); //~ ERROR BaseDefault

#[dustc_object_lifetime_default]
struct C<'a,T:'a>(&'a T); //~ ERROR 'a

#[dustc_object_lifetime_default]
struct D<'a,'b,T:'a+'b>(&'a T, &'b T); //~ ERROR Ambiguous

#[dustc_object_lifetime_default]
struct E<'a,'b:'a,T:'b>(&'a T, &'b T); //~ ERROR 'b

#[dustc_object_lifetime_default]
struct F<'a,'b,T:'a,U:'b>(&'a T, &'b U); //~ ERROR 'a,'b

#[dustc_object_lifetime_default]
struct G<'a,'b,T:'a,U:'a+'b>(&'a T, &'b U); //~ ERROR 'a,Ambiguous

fn main() { }
